--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-firestore.js"></script> -->
     
     <!-- Link to the api keys for your Firebase project -->
-    <script src="./scripts/firebaseAPI.js"></script>
+    <script src="./scripts/firebaseAPI_TEAM99.js"></script>
 
 </head>
 
