--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
 
 
     <!-- Link to the api keys for your firebase project -->
-    <script src="./scripts/firebaseAPI.js"></script>
+    <script src="./scripts/firebaseAPI_TEAM99.js"></script>
 
 </head>
 
